# repo-factory

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  config.example.yaml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONFIG.md  DESIGN_DECISIONS.md
examples/configs/: node-api.yaml  python-cli.yaml  research-py.yaml
examples/minimal/: config.yaml
examples/output/node-api/: .eslintrc.cjs  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  package.json
examples/output/node-api/.github/: PULL_REQUEST_TEMPLATE.md
examples/output/node-api/docs/: ARCHITECTURE.md
examples/output/node-api/src/: index.js
examples/output/node-api/tests/: test_generated.py
examples/output/python-cli/: .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  ruff.toml
examples/output/python-cli/.github/workflows/: ci.yml
examples/output/python-cli/docs/: README.md
examples/output/python-cli/src/: main.py
examples/output/python-cli/tests/: test_generated.py
examples/output/research-py/: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml
examples/output/research-py/.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
examples/output/research-py/docs/: CONFIG.md  DESIGN_DECISIONS.md
examples/output/research-py/src/: main.py
examples/output/research-py/tests/: test_generated.py
src/repofactory/: __init__.py  builder.py  cli.py
src/repofactory/templates/base/: CHANGELOG.j2  CONTRIBUTING.j2  (+5 more)
tests/: test_build.py  test_cli.py  test_examples.py  test_validation.py
(+18 files in other folders)
