[project]
name = "lab_notes"
version = "0.1.0"
description = "research template"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "lab-notes maintainer"}]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100